Release 2
=========

Documentation
-------------

 - Fixed the documentation for preloading multiple images.
 

Examples
--------

 - Down the Rabbit-Hole now preloads the images it uses.

 
Releases
--------

 - Added the media/music directory to theme packages.
 
 
 
Release 1.1 (2011-11-20)
========================

Initial release.